--- a/BlueprintTutorial2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BlueprintTutorial2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,8 +128,9 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Maps/NewMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Maps/NewMap.NewMap:PersistentLevel.NewMap
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -177,6 +178,20 @@ NewMap_C.Tick=True
 NewMap_C.Replication=True
 NewMap_C.Input=True
 NewMap_C.Actor=True
+PointLight_Blueprint_C.TransformCommon=True
+PointLight_Blueprint_C.Light=True
+PointLight_Blueprint_C.Rendering=True
+PointLight_Blueprint_C.Lightmass=True
+PointLight_Blueprint_C.Performance=True
+PointLight_Blueprint_C.LightFunction=True
+PointLight_Blueprint_C.Light Profiles=True
+PointLight_Blueprint_C.DistanceFieldShadows=True
+PointLight_Blueprint_C.Tags=True
+PointLight_Blueprint_C.Cooking=True
+PointLight_Blueprint_C.Input=True
+PointLight_Blueprint_C.Actor=True
+PointLight_Blueprint_C.Tick=True
+PointLight_Blueprint_C.Replication=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -848,6 +863,7 @@ bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/NewMap
+MRUItem0=/Game/Blueprints/PointLight_Blueprint
+MRUItem1=/Game/Maps/NewMap
 
 
