--- a/BlueprintTutorial2/Saved/Config/Windows/Engine.ini
+++ b/BlueprintTutorial2/Saved/Config/Windows/Engine.ini
@@ -33,4 +33,12 @@ JavaPath=(Path="")
 [MagicLeapSettings]
 WindowMirrorMode=1
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=False
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
 
