--- a/BlueprintTutorial2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BlueprintTutorial2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -16,6 +16,7 @@ bSCSEditorShowFloor=False
 SCSViewportCameraSpeed=4
 AssetViewerProfileName=
 MaterialQualityLevel=1
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
@@ -79,6 +80,7 @@ LastExecutedLaunchName=DESKTOP-MHDGJK2
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+NewWindowPosition=(X=315,Y=143)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -101,6 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/Maps/NewMap
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Maps
@@ -133,6 +136,7 @@ SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Maps/NewMap.NewMap:PersistentLevel.NewMap
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x300.Wall_Door_400x300;
@@ -192,6 +196,61 @@ PointLight_Blueprint_C.Input=True
 PointLight_Blueprint_C.Actor=True
 PointLight_Blueprint_C.Tick=True
 PointLight_Blueprint_C.Replication=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+ThirdPersonCharacter_C.TransformCommon=True
+ThirdPersonCharacter_C.Animation=True
+ThirdPersonCharacter_C.Mesh=True
+ThirdPersonCharacter_C.Clothing=True
+ThirdPersonCharacter_C.Physics=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.ClothingSimulation=True
+ThirdPersonCharacter_C.Lighting=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.Tags=True
+ThirdPersonCharacter_C.Activation=True
+ThirdPersonCharacter_C.Cooking=True
+ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+ThirdPersonCharacter_C.Character Movement (General Settings)=True
+ThirdPersonCharacter_C.Character Movement: Walking=True
+ThirdPersonCharacter_C.Character Movement: Swimming=True
+ThirdPersonCharacter_C.Character Movement: Flying=True
+ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+ThirdPersonCharacter_C.Character Movement (Networking)=True
+ThirdPersonCharacter_C.Character Movement=True
+ThirdPersonCharacter_C.Character Movement: Avoidance=True
+ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+ThirdPersonCharacter_C.RootMotion=True
+ThirdPersonCharacter_C.NavMovement=True
+ThirdPersonCharacter_C.Velocity=True
+ThirdPersonCharacter_C.PlanarMovement=True
+ThirdPersonCharacter_C.MovementComponent=True
+ThirdPersonCharacter_C.Shape=True
+ThirdPersonCharacter_C.Navigation=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Input=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Materials=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.Physics=True
+TriggerBox.Collision=True
+TriggerBox.Rendering=True
+TriggerBox.Tags=True
+TriggerBox.Cooking=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -863,7 +922,8 @@ bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/PointLight_Blueprint
-MRUItem1=/Game/Maps/NewMap
+MRUItem0=/Game/Maps/NewMap
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/Blueprints/PointLight_Blueprint
 
 
